--- a/todo.org
+++ b/todo.org
@@ -1,13 +1,15 @@
-* TODO: bind recenter-top-bottom to `z z`?
+* TODO: bind recenter-top-bottom to =z z=?
 * TODO: hey what if dired had color ranges for sizes and date-times
 - Color by ext / mime-type?
 
-* TODO: Learn how `filecache.el`'s store paths are inlined, apply to `locate.el`?
-- Esp. `htmlfontify.el`, which looks for `etags-bin` even though
-  `emacs:out` has `bin/etags`.
-- Ditto `hexl.el`
+* TODO: Learn how =filecache.el='s store paths are inlined, apply to =locate.el=?
+- Esp. =htmlfontify.el=, which looks for =etags-bin= even though
+  =emacs:out= has =bin/etags=.
+- Ditto =hexl.el=
 * TODO: Corfu-doc
-* TODO: Dirvish-git-gutter / OG: Re-use overlays?
+* =dirvish-git-gutter=
+** TODO: Re-use overlays? (ideally applies to OG too)
+** TODO: Only show when in a git directory, without lagging?
 * TODO: beacon-mode which-key advice
 * TODO: Consistent indentation / dir-locals
 * TODO: Based on gentoo eflags, remove lisp i dont use
@@ -18,14 +20,14 @@
 - mail (pick one package & it's deps?)
 * TODO: Fix embark binding conflicts
 * TODO: Prevent consult from attempting to preview EAF buffers
-* TODO: Split `:general` bindings into `:general-config` where appropriate
+* TODO: Split =:general= bindings into =:general-config= where appropriate
 * TODO: Dirvish vc cache nonsense why?
 * TODO: Make narrowed consult-buffer act like consult-bookmark
 - Consult-buffer, when narrowed to bookmarks, should create a new bookmark
-  with `name` when it doesn't already exist.
+  with =name= when it doesn't already exist.
 * TODO: wrap line-to-top advice aorund next-page / prev-page
 * TODO: clean up all the dirvish code
-* TODO: `dired-kill-when-opening-new-dired-buffer`?
+* TODO: =dired-kill-when-opening-new-dired-buffer=?
 * TODO: do I want tab(spaces)?
 * TODO: Prefer vertical splits (specifically in focus mode)
 * TODO: variable pitch fonts for org-mode, needs mono in src blocks and less bold
