--- a/todo.org
+++ b/todo.org
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: CC0-1.0
 
 * TODO [#A] evil-insert bugs out?
+* TODO Error handling for shell commands
 * TODO bind recenter-top-bottom to =z z=?
 * TODO hey what if dired had color ranges for sizes and date-times
 - Color by ext / mime-type?
